cc_library(
    name = "fast_double_parser",
    hdrs = ["include/fast_double_parser.h"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "unit",
    srcs = ["tests/unit.cpp"],
    deps = [":fast_double_parser"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmarks/benchmark.cpp"],
    deps = [
        ":fast_double_parser",
        "@abseil-cpp//absl/strings",
        "@double-conversion",
    ],
)
