"""fast_double_parser: 4x faster than strtod."""

module(
    name = "fast_double_parser",
    version = "0.8.0",
    compatibility_level = 0,
)

bazel_dep(name = "abseil-cpp", version = "20240722.0", dev_dependency = True)
bazel_dep(name = "double-conversion", version = "3.3.0", dev_dependency = True)
